# text2sql-agent

./: .env.example  .gitignore  README.md  app.py  chainlit.md  chinook_benchmark_v1.json.rtf  pyproject.toml  requirements.txt
docs/markdown/: example_reference.md
docs/processed/: schema_docs.json
examples/chinook/: .env.gemma4  .env.generated  README.md
examples/chinook/docs/markdown/: allowed_tables.txt  schema_overview.md
examples/chinook/docs/markdown/tables/: album.md  artist.md  customer.md  employee.md  genre.md  invoice.md  invoiceline.md  mediatype.md  playlist.md  playlisttrack.md  track.md
examples/imdb/: .env.gemma4  .env.generated  README.md  imdb_smoke_eval.json
examples/imdb/docs/markdown/: allowed_tables.txt  schema_overview.md
examples/imdb/docs/markdown/tables/: imdb_core__name_known_for_title.md  imdb_core__name_primary_profession.md  imdb_core__title_director.md  imdb_core__title_genre.md  imdb_core__title_writer.md  imdb_raw__name_basics.md  imdb_raw__title_basics.md  imdb_raw__title_episode.md  imdb_raw__title_principals.md  imdb_raw__title_ratings.md
notebooks/: 01_single_agent_benchmark.ipynb  02_compare_agents.ipynb
scripts/: evaluate_agent.py  export_database_docs.py  extract_pdf_docs.py  run_chainlit.sh  setup_chinook_sqlite.py  setup_imdb_postgres.py
sql_agent/: __init__.py  agent.py  coda_docs.py  config.py  database.py  docs_loader.py  markdown_docs.py  pdf_docs.py  schema_docs.py  schema_markdown.py
sql_agent/evaluation/: __init__.py  compare.py  dataset.py  metrics.py  report.py  runner.py
