[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sql-agent"
version = "0.1.0"
description = "Reusable Chainlit + Smolagents text-to-SQL agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chainlit>=2.0.0",
  "smolagents>=1.22.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=1.0.1",
  "sqlglot>=26.0.0",
  "requests>=2.32.0",
  "litellm>=1.63.0",
]

[project.optional-dependencies]
eval = [
  "pandas>=2.2.0",
  "matplotlib>=3.9.0",
  "jupyter>=1.1.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sql_agent*"]
